@@ -1,3 +1,4 @@
+	* make files deleted alert non-discardable
 	* make built-in sha functions not conflict with libcrypto
 	* improve web seed hash failure case
 	* improve DHT lookup times
